# r-wire

./: .eslintrc.cjs  .gitignore  AGENTS.md  CONTRIBUTING.md  GEMINI.md  LICENSE  QWEN.md  README.md  ROADMAP.md  capture.db  capture.db-shm  capture.db-wal  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest-setup.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  capture.db  tauri.conf.json
src-tauri/src/: capture.rs  dissector.rs  export.rs  lib.rs  main.rs  model.rs  state.rs
src/lib/: stores.ts
src/lib/components/: CaptureControls.svelte  FlowTimeline.svelte  ForensicArtifacts.svelte  ForensicIntelligence.svelte  ForensicNarrative.svelte  HexView.svelte  HexView.test.ts  OnboardingTour.svelte  PacketDetailTabs.svelte  PacketList.svelte  PacketOverview.svelte  PayloadInspector.svelte  ProtocolTree.svelte  ProtocolTree.test.ts  SequenceDiagram.svelte  StatisticsPanel.svelte  StreamDialog.svelte
src/lib/utils/: filter.test.ts  filter.ts  statistics.test.ts  statistics.ts
src/routes/: +layout.svelte  +page.svelte
tests/: filter.test.js
